Fix nav scroll so join buttons don't get cut off

--- a/scss/_root.scss
+++ b/scss/_root.scss
@@ -31,6 +31,7 @@ body {
   .next-wrapper,
   #__next {
     height: 100%;
+    overflow: hidden;
   }
 
   > div {
